# Von-Neumann-Simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c
include/: BIT_MATH.h  data_hazard_block.h  instruction.h  instruction_set.h  memory.h  register_set.h  test.h
src/: data_hazard_block.c  instruction.c  instruction_set.c  instructions.c  main.c  memory.c  register_set.c
